--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,37 @@ dev-dependencies = [
     "pytest~=8.3.0",
     "ruff~=0.6.3",
 ]
+
+[tool.ruff]
+line-length = 88
+indent-width = 4
+target-version = "py310"
+extend-exclude = [
+    "*.ipynb", # TODO: don't exclude ipynbs
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F"] # TODO: add "D1" and "D2" for docstring checks
+ignore = [
+    "E402", # module-level import not at top of cell
+    "E501", # line-length violation
+    "E711", # None comparison (common in pandas code)
+    "E712", # True/False comparison (common in pandas code)
+]
+
+[tool.ruff.lint.per-file-ignores]
+# ignore import violations in all init files
+"__init__.py" = ["E402", "F401"]
+
+[tool.ruff.lint.isort]
+lines-after-imports = 1
+
+[tool.pytest.ini_options]
+minversion = "8.0"
+addopts = "--verbose"
+filterwarnings = ["ignore::DeprecationWarning"]
+testpaths = ["tests"]
