--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "student-success-tool"
 version = "0.1.0"
 description = "School-agnostic lib for implementing Student Success Tool workflows."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "~=3.10"
 dependencies = [
     "databricks-connect~=13.3",
     "ipywidgets~=8.1.2",
