--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,19 +8,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-        with:
-          version: "0.4.20"
-          enable-cache: true
-          cache-dependency-glob: "uv.lock"
-      - name: "Set up Python"
-        uses: actions/setup-python@v5
-        with:
-          python-version-file: "pyproject.toml"
-      - name: Install project
-        run: |
-          uv sync --dev
+      - name: Set up Python environment
+        uses: ./.github/actions/setup-python-env
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v45.0.1
