fix: Invoke pytest properly in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
         uses: ./.github/actions/setup-python-env
       - name: Run tests
         run: |
-          uv tool run pytest
+          uv run python -m pytest
