--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "student-success-tool"
 version = "0.1.0"
 description = "School-agnostic lib for implementing Student Success Tool workflows."
 readme = "README.md"
-requires-python = "~=3.10"
+requires-python = "~=3.10.0"
 dependencies = [
     "databricks-connect~=13.3",
     "ipywidgets~=8.1.2",
@@ -21,6 +21,9 @@ dependencies = [
     "textwrap3~=0.9.2",
     # "shap~=0.45.0"  # does not install!
 ]
+
+[project.urls]
+Repository = "https://github.com/datakind/student-success-tool"
 
 [build-system]
 requires = ["hatchling"]
@@ -68,3 +71,10 @@ minversion = "8.0"
 addopts = "--verbose"
 filterwarnings = ["ignore::DeprecationWarning"]
 testpaths = ["tests"]
+
+[tool.mypy]
+python_version = "3.10"
+files = ["src"]
+disallow_incomplete_defs = true
+warn_return_any = true
+warn_unused_ignores = true
