--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,4 +77,4 @@ python_version = "3.10"
 files = ["src"]
 disallow_incomplete_defs = true
 warn_return_any = true
-warn_unused_ignores = true
+ignore_missing_imports = true
