--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "matplotlib~=3.9.0",
     "missingno~=0.5.0",
     "mlflow~=2.11",
+    "numpy~=2.1.0",
     "pandas~=2.2.0",
     "pandera~=0.20.0",
     "pillow~=9.3.0",
