--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,8 +74,13 @@ filterwarnings = ["ignore::DeprecationWarning"]
 testpaths = ["tests"]
 
 [tool.mypy]
-python_version = "3.10"
 files = ["src"]
-disallow_incomplete_defs = true
+python_version = "3.10"
+pretty = true
+allow_redefinition = true
 warn_return_any = true
+disallow_incomplete_defs = true
 ignore_missing_imports = true
+follow_imports = "silent"
+# in case of irreconcilable differences, consider telling mypy to ignore all errors
+# ignore_errors = true
