--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Python environment
         uses: ./.github/actions/setup-python-env
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v45.0.1
+        with:
+          files: |
+            src/**.py
       - name: Run tests
         run: |
           uv run python -m pytest
       - name: Check types
         run: |
-          uv run python -m mypy --install-types --non-interactive
+          uv run python -m mypy --install-types --non-interactive ${{ steps.changed-files.outputs.all_changed_files }}
