--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: ./.github/actions/setup-python-env
       - name: Get changed files
         id: changed-files
-        uses: tj-actions/changed-files@v45.0.1
+        uses: tj-actions/changed-files@v45
         with:
           files: |
             src/**.py
@@ -20,5 +20,6 @@ jobs:
         run: |
           uv run python -m pytest
       - name: Check types
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           uv run python -m mypy --install-types --non-interactive ${{ steps.changed-files.outputs.all_changed_files }}
