--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Python environment
         uses: ./.github/actions/setup-python-env
+        with:
+          python-version: "3.10"
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v45
