--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,22 @@ name: test
 on: pull_request
 
 jobs:
-  test:
+  test-and-type-check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+      fail-fast: false
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
       - name: Set up Python environment
         uses: ./.github/actions/setup-python-env
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v45
