ci: Tweak setup env composite action

--- a/.github/actions/setup-python-env/action.yml
+++ b/.github/actions/setup-python-env/action.yml
@@ -4,14 +4,13 @@ inputs:
   python-version:
     description: "Python version to use"
     required: true
-  uv-version:
-    description: "uv version to use"
-    required: false
-    default: "0.4.20"
 
 runs:
   using: composite
   steps:
+    - name: Check out repository
+      uses: actions/checkout@v4
+
     - name: Install python
       uses: actions/setup-python@v5
       with:
@@ -20,7 +19,7 @@ runs:
     - name: Install uv
       uses: astral-sh/setup-uv@v3
       with:
-        version: ${{ inputs.uv-version }}
+        version: "0.4.22"
         enable-cache: true
 
     - name: Install project and dependencies
