fix: Un-move checkout repo step

--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -6,6 +6,8 @@ jobs:
   type-check:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
       - name: Set up Python environment
         uses: ./.github/actions/setup-python-env
         with:
