--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
     #   run:
     #     shell: bash
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
       - name: Set up Python environment
         uses: ./.github/actions/setup-python-env
         with:
