ci: Invalidate uv cache on lockfile change
_I think_

--- a/.github/actions/setup-python-env/action.yml
+++ b/.github/actions/setup-python-env/action.yml
@@ -17,6 +17,7 @@ runs:
       with:
         version: "0.4.22"
         enable-cache: true
+        cache-dependency-glob: "uv.lock"
     - name: Install project and dependencies
       run: uv sync --frozen --dev
       shell: bash
