ci: Also run tests on weekly cron
just to lightly kick the tires

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
 name: test
 
-on: pull_request  # any pull request
+on:
+  pull_request:  # any pull request
+  schedule:  # run weekly
+    - cron: "0 12 * * 0"
 
 jobs:
   test:
