--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10,<3.12"
 dependencies = [
     "databricks-connect~=13.3",
+    "faker>=20.1",
     "ipywidgets~=8.1",
     "matplotlib~=3.7",
     "missingno~=0.5",
