Create Dockerfile and scripts for api container development

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "statsmodels~=0.14",
     "textwrap3~=0.9",
     "shap~=0.45.0",
+    "fastapi[standard]>=0.115.4",
 ]
 
 [project.urls]
