--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 fastapi[standard]>=0.113.0,<0.114.0
 pydantic>=2.7.0,<3.0.0
+pytest==7.2.2
+pytest-cov==4.0.0
+ruff==v0.0.260
+coverage-badge~=1.1.0
+pylint==3.3.1
