--- a/.github/workflows/experimental-precommit.yml
+++ b/.github/workflows/experimental-precommit.yml
@@ -26,7 +26,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Using pylint
         run: |
-          pylint $(git ls-files 'src/webapp/.py')
+          pylint $(git ls-files 'src/webapp/*.py')
       - name: Test with pytest
         run: |
           coverage run -m pytest  -v -s
