--- a/.github/workflows/experimental-precommit.yml
+++ b/.github/workflows/experimental-precommit.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Run Black.
+        uses: psf/black@stable
       - name: Using pylint
         run: |
           pylint $(git ls-files 'src/webapp/*.py')
