--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,17 @@
         "HOME": "/home/vscode"
     },
     "postCreateCommand": ".devcontainer/post-create.sh",
-    "forwardPorts": [
-        8080
-    ]
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "ms-python.black-formatter"
+            ],
+            "settings": {
+                "[python]": {
+                    "editor.defaultFormatter": "ms-python.black-formatter",
+                    "editor.formatOnSave": true
+                  }
+            }
+        }
+    }
 }
