--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
     "customizations": {
         "vscode": {
             "extensions": [
+                "hashicorp.terraform",
                 "ms-python.black-formatter"
             ],
             "settings": {
