Modifies requirements to enable pytest and include cloud pkgs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
 fastapi[standard]>=0.113.0,<0.114.0
+google==3.0.0
+google-api-core==2.23.0
+google-auth==2.36.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
 pydantic>=2.7.0,<3.0.0
-pytest==8.0
+pylint=3.3.1
+pytest==8.3.3
 pytest-cov==4.0.0
+python-dotenv==1.0.1
+python-multipart==0.0.17
 ruff==v0.0.260
 coverage-badge~=1.1.0
 pylint==3.3.1
+black==24.10.0
