--- a/.github/workflows/experimental-precommit.yml
+++ b/.github/workflows/experimental-precommit.yml
@@ -24,14 +24,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      #- name: Run Black.
-      #  uses: psf/black@stable
-      #- name: Using pylint
-      #  run: |
-      #    pylint $(git ls-files 'src/webapp/*.py')
-      #- name: Test with pytest
-      #  run: |
-      #    coverage run -m pytest  -v -s
-      #- name: Generate Coverage Report
-      #  run: |
-      #    coverage report -m
+      - name: Run Black.
+        uses: psf/black@stable
+        with:
+          options: "--check --verbose"
+          src: "./../../src/webapp"
+      - name: Using pylint
+        run: |
+          pylint $(git ls-files './../../src/webapp/*.py')
+      - name: Test with pytest
+        run: |
+          coverage run -m pytest  -v -s ./../../src/webapp/
+      - name: Generate Coverage Report
+        run: |
+          coverage report -m
