--- a/.github/workflows/experimental-precommit.yml
+++ b/.github/workflows/experimental-precommit.yml
@@ -24,11 +24,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: debugging this yml.
+        run: |
+          pwd
       - name: Run Black.
         uses: psf/black@stable
         with:
           options: "--check --verbose"
-          src: "./../../src/webapp"
+          src: "../../src/webapp"
+          version: "~= 22.0"
       - name: Using pylint
         run: |
           pylint $(git ls-files './../../src/webapp/*.py')
