--- a/.github/workflows/experimental-precommit.yml
+++ b/.github/workflows/experimental-precommit.yml
@@ -24,21 +24,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: debugging this yml.
-        run: |
-          pwd
       - name: Run Black.
         uses: psf/black@stable
         with:
           options: "--check --verbose"
-          src: "../../src/webapp"
+          src: "./src/webapp"
           version: "~= 22.0"
       - name: Using pylint
         run: |
-          pylint $(git ls-files './../../src/webapp/*.py')
+          pylint $(git ls-files './src/webapp/*.py')
       - name: Test with pytest
         run: |
-          coverage run -m pytest  -v -s ./../../src/webapp/
+          coverage run -m pytest  -v -s ./src/webapp/
       - name: Generate Coverage Report
         run: |
           coverage report -m
