--- a/.github/workflows/experimental-precommit.yml
+++ b/.github/workflows/experimental-precommit.yml
@@ -32,7 +32,7 @@ jobs:
           version: "~= 22.0"
       - name: Using pylint
         run: |
-          pylint $(git ls-files './src/webapp/*.py')
+          pylint $(git ls-files './src/webapp/*.py') --errors-only
       - name: Test with pytest
         run: |
           coverage run -m pytest  -v -s ./src/webapp/
