added sftp copy example code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "fastapi[standard]>=0.115.4",
     "google-cloud>=0.34.0",
     "google-cloud-storage>=2.18.2",
+    "paramiko>=3.5.0",
 ]
 
 [project.urls]
