--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ google-cloud-storage==2.18.2
 google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
+paramiko==3.5.0
 pydantic>=2.7.0,<3.0.0
 pylint==3.3.1
 pytest==8.3.3
