--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "School-agnostic lib for implementing Student Success Tool workflo
 readme = "README.md"
 requires-python = ">=3.10,<3.12"
 dependencies = [
-    "databricks-connect~=13.3",
+    "databricks-connect~=16.0",
+    "databricks-sdk~=0.38.0",
     "faker>=20.1",
     "ipywidgets~=8.1",
     "matplotlib~=3.7",
