--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,29 @@
-fastapi[standard]>=0.113.0,<0.114.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+astroid==3.3.5
+attrs==24.2.0
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
+black==24.10.0
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cloud-sql-python-connector==1.14.0
+coverage==7.6.7
+coverage-badge==1.1.2
+cryptography==43.0.3
+dill==0.3.9
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.113.0
+fastapi-cli==0.0.5
+frozenlist==1.5.0
 google==3.0.0
 google-api-core==2.23.0
 google-auth==2.36.0
@@ -7,14 +32,58 @@ google-cloud-storage==2.18.2
 google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.27.2
+idna==3.10
+iniconfig==2.0.0
+isort==5.13.2
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mdurl==0.1.2
+multidict==6.1.0
+mypy-extensions==1.0.0
+packaging==24.2
 paramiko==3.5.0
-pydantic>=2.7.0,<3.0.0
+pathspec==0.12.1
+platformdirs==4.3.6
+pluggy==1.5.0
+propcache==0.2.1
+proto-plus==1.25.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
 pylint==3.3.1
+PyMySQL==1.1.1
+PyNaCl==1.5.0
 pytest==8.3.3
 pytest-cov==4.0.0
 python-dotenv==1.0.1
 python-multipart==0.0.17
-ruff==v0.0.260
-coverage-badge~=1.1.0
-pylint==3.3.1
-black==24.10.0
+PyYAML==6.0.2
+requests==2.32.3
+rich==13.9.4
+rsa==4.9
+ruff==0.0.260
+shellingham==1.5.4
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+starlette==0.38.6
+tomlkit==0.13.2
+typer==0.13.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websockets==14.1
+yarl==1.18.3
