--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
     "google-cloud>=0.34.0",
     "google-cloud-storage>=2.18.2",
     "paramiko>=3.5.0",
+    "cloud-sql-python-connector[pymysql]>=1.14.0",
+    "sqlalchemy>=2.0.36",
+    "pytest>=8.3.3",
 ]
 
 [project.urls]
