--- a/.github/workflows/experimental-precommit.yml
+++ b/.github/workflows/experimental-precommit.yml
@@ -1,4 +1,4 @@
-# precommit actions for fellows-experimental branch
+# precommit actions for fellows-experimental branch.
 name: test
 
 on:
@@ -16,14 +16,17 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          # Install a specific version of uv.
+          version: "0.5.7"
       - name: Set up Python ${{ matrix.python-version }}
         uses: ./.github/actions/setup-python-env
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install the project 
+        run: uv sync --all-extras --dev 
       - name: Run Black.
         uses: psf/black@stable
         with:
