--- a/src/student_success_tool/assets/pdp/features_table.toml
+++ b/src/student_success_tool/assets/pdp/features_table.toml
@@ -16,8 +16,8 @@ section_num_students_enrolled_mean = { name = "avg. number of students enrolled 
 section_num_students_enrolled_std = { name = "std. dev. in number of students enrolled per section this term" }
 num_courses_core_course_y = { name = "number of core courses taken this term" }
 num_courses_enrolled_at_other_institution_s_y = { name = "number of courses taken this term while enrolled at another institution" }
-"num_courses_course_subject_area_*" = { name = "TODO: number of courses taken in subject area this term" }
-"num_courses_course_id_*" = { name = "TODO: number of times this course taken this term" }
+# "num_courses_course_subject_area_*" = { name = "TODO: number of courses taken in subject area this term" }
+# "num_courses_course_id_*" = { name = "TODO: number of times this course taken this term" }
 num_courses_course_type_cu = { name = "number of college-level, undergraduate courses taken this term" }
 num_courses_course_type_cg = { name = "number of college-level, graduate courses taken this term" }
 num_courses_course_type_cc = { name = "number of college developmental, remedial, or preparatory courses taken this term" }
@@ -102,8 +102,8 @@ frac_courses_passed = { name = "fraction of courses passed this term" }
 frac_courses_completed = { name = "fraction of courses completed this term" }
 frac_courses_core_course_y = { name = "fraction of core courses taken this term" }
 frac_courses_enrolled_at_other_institution_s_y = { name = "fraction of courses taken this term while student enrolled at another institution" }
-"frac_courses_course_subject_area_*" = { name = "TODO" }
-"frac_courses_course_id_*" = { name = "TODO" }
+# "frac_courses_course_subject_area_*" = { name = "TODO: fraction of courses taken in subject area this term" }
+# "frac_courses_course_id_*" = { name = "TODO: fraction of times this course taken this term" }
 frac_courses_course_type_cu = { name = "fraction of college-level, undergraduate courses taken this term" }
 frac_courses_course_type_cg = { name = "fraction of college-level, graduate courses taken this term" }
 frac_courses_course_type_cc = { name = "fraction of college developmental, remedial, or preparatory courses taken this term" }
@@ -175,14 +175,14 @@ num_credits_attempted_cummin = { name = "min. number of credits attempted per te
 num_credits_earned_cumsum = { name = "total number of credits earned so far" }
 num_credits_earned_cummean = { name = "avg. number of credits earned per term so far" }
 num_credits_earned_cummin = { name = "min. number of credits earned per term so far" }
-student_pass_rate_above_sections_avg_cumsum = { name = "TODO" }
-student_completion_rate_above_sections_avg_cumsum = { name = "TODO" }
+student_pass_rate_above_sections_avg_cumsum = { name = "number of terms so far where student's pass rate is above sections' avg. pass rate" }
+student_completion_rate_above_sections_avg_cumsum = { name = "number of terms so far where student's completion rate is above sections' avg. completion rate" }
 num_courses_passed_cumfrac = { name = "fraction of courses passed so far" }
 num_courses_completed_cumfrac = { name = "fraction of courses completed so far" }
 num_courses_core_course_y_cumfrac = { name = "fraction of core courses taken so far" }
-num_courses_enrolled_at_other_institution_s_y_cumfrac = { name = "TODO" }
-"num_courses_course_subject_area_*_cumfrac" = { name = "TODO" }
-"num_courses_course_id_*_cumfrac" = { name = "TODO" }
+num_courses_enrolled_at_other_institution_s_y_cumfrac = { name = "fraction of courses taken so far while student enrolled at another institution" }
+# "num_courses_course_subject_area_*_cumfrac" = { name = "TODO: fraction of courses taken in subject area so far" }
+# "num_courses_course_id_*_cumfrac" = { name = "TODO: fraction of times this course taken so far" }
 num_courses_course_type_cu_cumfrac = { name = "fraction of college-level, undergraduate courses taken so far" }
 num_courses_course_type_cg_cumfrac = { name = "fraction of college-level, graduate courses taken so far" }
 num_courses_course_type_cc_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far" }
@@ -222,21 +222,21 @@ num_courses_course_grade_b_cumfrac = { name = "fraction of B grades earned so fa
 num_courses_course_grade_c_cumfrac = { name = "fraction of C grades earned so far" }
 num_courses_course_grade_d_cumfrac = { name = "fraction of D grades earned so far" }
 num_courses_course_grade_f_cumfrac = { name = "fraction of F grades earned so far" }
-num_courses_grade_is_failing_or_withdrawal_cumfrac = { name = "TODO" }
-num_courses_grade_above_section_avg_cumfrac = { name = "TODO" }
-num_courses_in_program_of_study_area_term_1_cumfrac = { name = "TODO" }
-num_courses_in_program_of_study_area_year_1_cumfrac = { name = "TODO" }
-cumfrac_terms_unenrolled = { name = "TODO" }
-cumfrac_fall_spring_terms_unenrolled = { name = "TODO" }
-num_courses_diff_prev_term = { name = "TODO" }
-num_credits_earned_diff_prev_term = { name = "TODO" }
-course_grade_numeric_mean_diff_prev_term = { name = "TODO" }
-num_courses_diff_term_1_to_term_2 = { name = "TODO" }
-num_courses_diff_term_2_to_term_3 = { name = "TODO" }
-num_courses_diff_term_3_to_term_4 = { name = "TODO" }
-num_credits_earned_diff_term_1_to_term_2 = { name = "TODO" }
-num_credits_earned_diff_term_2_to_term_3 = { name = "TODO" }
-num_credits_earned_diff_term_3_to_term_4 = { name = "TODO" }
-course_grade_numeric_mean_diff_term_1_to_term_2 = { name = "TODO" }
-course_grade_numeric_mean_diff_term_2_to_term_3 = { name = "TODO" }
-course_grade_numeric_mean_diff_term_3_to_term_4 = { name = "TODO" }
+num_courses_grade_is_failing_or_withdrawal_cumfrac = { name = "fraction of courses failed or withdrawn so far" }
+num_courses_grade_above_section_avg_cumfrac = { name = "fraction of courses so far with grades above the sections' avg. grades" }
+num_courses_in_program_of_study_area_term_1_cumfrac = { name = "number of courses taken so far in student's first-term program of study area" }
+num_courses_in_program_of_study_area_year_1_cumfrac = { name = "number of courses taken so far in student's first-year program of study area" }
+cumfrac_terms_unenrolled = { name = "fraction of skipped terms so far" }
+cumfrac_fall_spring_terms_unenrolled = { name = "fraction of skipped fall/spring terms so far" }
+num_courses_diff_prev_term = { name = "change in number of courses taken this term compared to previous term" }
+num_credits_earned_diff_prev_term = { name = "change in number of credits earned this term compared to previous term" }
+course_grade_numeric_mean_diff_prev_term = { name = "change in avg. numeric grade this term compared to previous term" }
+num_courses_diff_term_1_to_term_2 = { name = "change in number of courses taken in term 2 compared to term 1" }
+num_courses_diff_term_2_to_term_3 = { name = "change in number of courses taken in term 3 compared to term 2" }
+num_courses_diff_term_3_to_term_4 = { name = "change in number of courses taken in term 4 compared to term 3" }
+num_credits_earned_diff_term_1_to_term_2 = { name = "chang ein number of credits earned in term 2 compared to term 1" }
+num_credits_earned_diff_term_2_to_term_3 = { name = "chang ein number of credits earned in term 3 compared to term 2" }
+num_credits_earned_diff_term_3_to_term_4 = { name = "chang ein number of credits earned in term 4 compared to term 3" }
+course_grade_numeric_mean_diff_term_1_to_term_2 = { name = "change in avg. numeric grade in term 2 compared to term 1" }
+course_grade_numeric_mean_diff_term_2_to_term_3 = { name = "change in avg. numeric grade in term 3 compared to term 2" }
+course_grade_numeric_mean_diff_term_3_to_term_4 = { name = "change in avg. numeric grade in term 4 compared to term 3" }
