update institution/data api and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "pylint>=3.3.2",
     "coverage>=7.6.9",
     "google-cloud-storage-control>=1.1.1",
+    "jsondiff>=2.2.1",
 ]
 
 [project.urls]
