--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,12 @@ dependencies = [
     "coverage>=7.6.9",
     "google-cloud-storage-control>=1.1.1",
     "jsondiff>=2.2.1",
+    "python-multipart>=0.0.16",
+    "pyjwt>=2.10.1",
+    "passlib>=1.7.4",
+    "bcrypt>=4.2.0",
+    "crypto>=1.4.1",
+    "python-dotenv>=1.0.1",
 ]
 
 [project.urls]
