--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -1,4 +1,12 @@
+# The following are required in all environments
 ENV="LOCAL"
+# Generate the following using `openssl rand -hex 32`
+SECRET_KEY = ""
+ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
+ACCESS_TOKEN_EXPIRE_MINUTES_DEFAULT = 30
+
+# The following can be left empty for the LOCAL environment
 DB_USER="user"
 DB_PASS="foobar"
 DB_NAME="table_names"
