add dev creds to example .env

--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -17,3 +17,7 @@ DB_CERT=""
 DB_ROOT_CERT=""
 DB_KEY=""
 PRIVATE_IP="TRUE"
+
+# The initial user credentials for DEV (facilitates development)
+DEV_INIT_DB_PASSWORD="<PUT PASSWORD HERE>"
+DEV_INIT_DB_USER="tester@datakind.org"
