--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "crypto>=1.4.1",
     "python-dotenv>=1.0.1",
     "strenum>=0.4.15",
+    "functions-framework>=3.8.2",
 ]
 
 [project.urls]
