update gcs key for url generation

--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -21,3 +21,6 @@ PRIVATE_IP="TRUE"
 # The initial user credentials for DEV (facilitates development)
 DEV_INIT_DB_PASSWORD="<PUT PASSWORD HERE>"
 DEV_INIT_DB_USER="tester@datakind.org"
+
+# GCP related keys. Retrieved for the service account with write access to GCS here: https://stackoverflow.com/questions/46287267/how-can-i-get-the-file-service-account-json-for-google-translate-api
+GCP_SERVICE_ACCOUNT_KEY_PATH=""
