--- a/notebooks/pdp/config-v2-TEMPLATE.toml
+++ b/notebooks/pdp/config-v2-TEMPLATE.toml
@@ -11,10 +11,10 @@ pred_prob_col = "pred_prob"
 pos_label = true
 random_state = 12345
 
-[labeled_dataset.raw_course]
+[datasets.labeled.raw_course]
 file_path = "/Volumes/CATALOG/INST_NAME_bronze/INST_NAME_bronze_file_volume/FILE_NAME_COURSE.csv"
 
-[labeled_dataset.raw_cohort]
+[datasets.labeled.raw_cohort]
 file_path = "/Volumes/CATALOG/INST_NAME_bronze/INST_NAME_bronze_file_volume/FILE_NAME_COHORT.csv"
 
 [preprocessing]
