--- a/notebooks/pdp/config-v2-TEMPLATE.toml
+++ b/notebooks/pdp/config-v2-TEMPLATE.toml
@@ -28,6 +28,10 @@ course_level_pattern = 'asdf'
 key_course_subject_areas = ["24", "51"]
 key_course_ids = ["ENGL101", "MATH101"]
 
+[preprocessing.target.params]
+min_num_credits_checkin = 30.0
+min_num_credits_target = 60.0
+
 [preprocessing.target.student_criteria]
 enrollment_type = "FIRST-TIME"
 credential_type_sought_year_1 = "Bachelor's Degree"
