Tweak project config + template + test case

--- a/notebooks/pdp/config-v2-TEMPLATE.toml
+++ b/notebooks/pdp/config-v2-TEMPLATE.toml
@@ -42,11 +42,11 @@ collinear_threshold = 10.0
 primary_metric = "log_loss"
 timeout_minutes = 10
 
-[trained_model]
+[models.graduation]
 experiment_id = "EXPERIMENT_ID"
 run_id = "RUN_ID"
-# model_type = "sklearn"
-min_prob_pos_label = 0.5
+model_type = "sklearn"
 
 [inference]
 num_top_features = 5
+min_prob_pos_label = 0.5
