--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "google-cloud>=0.34.0",
     "google-cloud-storage>=2.18.2",
     "paramiko>=3.5.0",
-    "cloud-sql-python-connector[pymysql]>=1.14.0",
+    "cloud-sql-python-connector[pg8000]>=1.14.0",
     "sqlalchemy>=2.0.36",
     "pytest>=8.3.3",
     "pylint>=3.3.2",
@@ -41,6 +41,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "strenum>=0.4.15",
     "functions-framework>=3.8.2",
+    "alembic>=1.13.3",
 ]
 
 [project.urls]
