--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -21,3 +21,8 @@ DEV_INIT_DB_USER="tester@datakind.org"
 
 # GCP related keys. Retrieved for the service account with write access to GCS here: https://stackoverflow.com/questions/46287267/how-can-i-get-the-file-service-account-json-for-google-translate-api
 GCP_SERVICE_ACCOUNT_KEY_PATH=""
+
+# Frontend integration related vars. Can be left empty for LOCAL environment.
+# These need to match the values set as env vars in the frontend binary.
+FE_USER=""
+FE_HASHED_PASSWORD=""
