add api key functionality

--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -24,5 +24,6 @@ GCP_SERVICE_ACCOUNT_KEY_PATH=""
 
 # Frontend integration related vars. Can be left empty for LOCAL environment.
 # These need to match the values set as env vars in the frontend binary.
+# TODO: delete when we switch to API keys.
 FE_USER=""
 FE_HASHED_PASSWORD=""
