--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -27,3 +27,6 @@ GCP_SERVICE_ACCOUNT_KEY_PATH=""
 # TODO: delete when we switch to API keys.
 FE_USER=""
 FE_HASHED_PASSWORD=""
+
+# Databricks related environment variables.
+CATALOG_NAME=""
