--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,7 +20,11 @@ jobs:
           files: |
             **.py
             **.ipynb
-      - name: Check style
+      - name: Run linter
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           uv tool run ruff check ${{ steps.changed-files.outputs.all_changed_files }}
+      - name: Run formatter
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: |
+          uv tool run ruff format --check ${{ steps.changed-files.outputs.all_changed_files }}
