--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,10 +1,10 @@
-name: lint
+name: style
 
 on:
   pull_request:  # any pull request
 
 jobs:
-  lint:
+  style:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -20,7 +20,11 @@ jobs:
           files: |
             **.py
             **.ipynb
-      - name: Check style
+      - name: Run linter
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           uv tool run ruff check ${{ steps.changed-files.outputs.all_changed_files }}
+      - name: Run formatter
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: |
+          uv tool run ruff format --check ${{ steps.changed-files.outputs.all_changed_files }}
