--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -30,3 +30,6 @@ FE_HASHED_PASSWORD=""
 
 # Databricks related environment variables.
 CATALOG_NAME=""
+
+# Datakinders allowed to issue API key. This should be the MINIMUM set. Keep this group small. Pass as a comma separated string structured like so: "abc@dk.org,bcd@dk.org"
+API_KEY_ISSUERS=""
