--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -21,6 +21,9 @@ DEV_INIT_DB_USER="tester@datakind.org"
 
 # GCP related keys. Retrieved for the service account with write access to GCS here: https://stackoverflow.com/questions/46287267/how-can-i-get-the-file-service-account-json-for-google-translate-api
 GCP_SERVICE_ACCOUNT_KEY_PATH=""
+GCP_REGION="us-east4"
+# The service account email used by Databricks
+GCP_SERVICE_ACCOUNT_EMAIL=""
 
 # Frontend integration related vars. Can be left empty for LOCAL environment.
 # These need to match the values set as env vars in the frontend binary.
@@ -30,6 +33,7 @@ FE_HASHED_PASSWORD=""
 
 # Databricks related environment variables.
 CATALOG_NAME=""
+DATABRICKS_WORKSPACE=""
 
 # Datakinders allowed to issue API key. This should be the MINIMUM set. Keep this group small. Pass as a comma separated string structured like so: "abc@dk.org,bcd@dk.org"
 API_KEY_ISSUERS=""
