add a few more db required env vars

--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -34,6 +34,8 @@ FE_HASHED_PASSWORD=""
 # Databricks related environment variables.
 CATALOG_NAME=""
 DATABRICKS_WORKSPACE=""
+DATABRICKS_HOST_URL=""
+
 
 # Datakinders allowed to issue API key. This should be the MINIMUM set. Keep this group small. Pass as a comma separated string structured like so: "abc@dk.org,bcd@dk.org"
 API_KEY_ISSUERS=""
