--- a/tests/institution_onboarding/template_enrollment_model_toml_file.toml
+++ b/tests/institution_onboarding/template_enrollment_model_toml_file.toml
@@ -43,8 +43,8 @@ primary_metric = "log_loss"
 timeout_minutes = 10
 
 [models.graduation]
-experiment_id = "EXPERIMENT_ID"
-run_id = "RUN_ID"
+experiment_id = "1510364684601785"
+run_id = "1510364684601785"
 framework = "sklearn"
 
 [inference]
