add back service accouont key

--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -20,6 +20,7 @@ DEV_INIT_DB_PASSWORD="<PUT PASSWORD HERE>"
 DEV_INIT_DB_USER="tester@datakind.org"
 
 # GCP related keys. Retrieved for the service account with write access to GCS here: https://stackoverflow.com/questions/46287267/how-can-i-get-the-file-service-account-json-for-google-translate-api
+GCP_SERVICE_ACCOUNT_KEY_PATH=""
 GCP_REGION="us-east4"
 # The service account email used by Databricks
 GCP_SERVICE_ACCOUNT_EMAIL=""
