--- a/pipelines/inference/sst_pdp_inference/workflow_asset_bundle/databricks.yml
+++ b/pipelines/inference/sst_pdp_inference/workflow_asset_bundle/databricks.yml
@@ -1,7 +1,7 @@
-# This is a Databricks asset bundle definition for sst_pipeline_workflow_deployment.
+# This is a Databricks asset bundle definition for SST Inference demo pipeline.
 # See https://docs.databricks.com/dev-tools/bundles/index.html for documentation.
 bundle:
-  name: sst_pipeline_workflow_deployment
+  name: SST Inference demo pipeline
   uuid: 99992898-07ae-4641-b086-dd3ba80ffc2f
 
 include:
@@ -10,11 +10,13 @@ include:
 variables:
   pipeline_sa_email:
     description: "Ingestion pipeline SA"
-  notification_email:
-    description: "Account used for email notifications"
-  can_manage_group:
+  datakind_notification_email:
+    description: "Datakind address used for email notifications"
+  end_user_notification_email:
+    description: "End user address used for email notifications"
+  group_to_manage_workflow:
     description: "Group with permissions to manage the job"
-  can_run_account_email:
+  service_account_user:
     description: "Service account user"
 
     
@@ -26,17 +28,12 @@ targets:
     # See also https://docs.databricks.com/dev-tools/bundles/deployment-modes.html.
     mode: development
     default: true
-    workspace:
-      host: https://4437281602191762.2.gcp.databricks.com
+
 
   prod:
     mode: production
     workspace:
-      host: https://4437281602191762.2.gcp.databricks.com
       # We explicitly specify /Workspace/Users/pedro.melendez@datakind.org to make sure we only have a single copy.
       root_path: /Workspace/Users/pedro.melendez@datakind.org/.bundle/${bundle.name}/${bundle.target}
-    permissions:
-      - user_name: pedro.melendez@datakind.org
-        level: CAN_MANAGE
-    run_as:
-      user_name: pedro.melendez@datakind.org
+
+
